<resources>
    <string name="app_name">TwisT</string>
    <string name="profile_image">profile image</string>
    <string name="share_button">share_Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login"><u>Login</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
</resources>