<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignInActivity"
    android:background="@color/blueBackground">

    <ProgressBar
        android:id="@+id/proggressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:fontFamily="@font/nunito_black"
        android:layout_marginTop="60dp"
        android:layout_marginStart="48dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in with your data that you entered"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
        android:layout_margin="48dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            android:textSize="16sp"
            android:layout_marginTop="35dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Your E-mail Address"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_regular"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type your password"
                android:textSize="12sp"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:checked="true"
                app:buttonTint="@color/blueButton"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember Me"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_regular"
                android:layout_gravity="end|center_vertical"/>

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/nunito_regular"
                android:textColor="@color/black"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:layout_marginStart="62dp"/>




        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/sign_in"
            android:textSize="20sp"
            app:backgroundTint="@color/blueButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:fontFamily="@font/nunito_regular"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:fontFamily="@font/nunito_regular"
                android:textColor="@color/red"
                android:layout_marginStart="5dp"/>

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>